common/basic-auth/base/kflogin-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basic-auth-login
spec:
  selector:
    matchLabels:
      app: basic-auth-login
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: basic-auth-login
    spec:
      name: app
      containers:
      - name: app
        image: gcr.io/kubeflow-images-public/kflogin-ui:v20190123-v0.4.0-rc.1-73-g38ad5f77
        ports:
        - containerPort: 5000
