common/basic-auth/base/kflogin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |-
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name: kflogin-mapping
      prefix: /kflogin
      rewrite: /kflogin
      timeout_ms: 300000
      service: basic-auth-login.$(service-namespace)
      use_websocket: true
  name: basic-auth-logins
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: basic-auth-login
  type: ClusterIP
