common/basic-auth/base/kflogin-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gatekeeper
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /kflogin
    rewrite:
      uri: /kflogin
    route:
    - destination:
        host: basic-auth.$(service-namespace)
        port:
          number: 8085
